T3CH Upgrader Changelog:
========================
v1.6.2 07/07/08
  New: Vision2 skin added (thanks smuto)
  Updated: Swedish strings.
v1.6.1 19/05/08
  Change: Checks (and creates) settings unrar path exists. (eg. E:\apps)
  Change: When checking SFV, if filename entry not found, does 2nd check for filename+ext
  Change: Free RAM warning reduced to 31mb from 32mb.
  Updated: Polish and Finnish language strings.
  New: Incidious skin (for changelogs/readme's etc)
v1.6 22/04/08 
  Fix: Script update would hang whilst making a backup of itself to scripts\backups subfolder (update.py)
  Change: Cope with T3CH build rar filenames being too long for xbox filesystem.
  Change: Will prompt if to continue if archive filename entry not found in SFV doc.
  Change: Main Menu will exit with Back instead of going into Settings Menu.
  Change: Removed Build Version (not the build date) fro Menu title, so it fits better on non widescreen rez.
  Change: Deletes some python modules from ram on exit.
  Change: Script icon cropped, gives better drop shadow with some skins.
  New: Check against two ftp servers instead of just one.
v1.5.1
  Change: Self update changed to backup to subfolder 'Q:\scripts\backups'. Makes the scripts folder less cluttered.
  Updated: Skins tweaked (thanks to smuto)
  Updated: Most language files (thanks to smuto, bootsy, kottis)
  Fix: TextBoxDialogXML() to prevent possible hang when viewing changelogs etcs.
v1.5 28/02/08
  New: Checks if enough installation Drive space (stops) and Free RAM (prompt to continue).
  Change: 'Update Script (renamed to 'Check For Script Update') only shown on Menu if Setting 'Check for Script Update at Startup' is disabled
  Change: Browse for local archive only shows pre listing dialog if MC360 skin in use. Other skins displays Dialog Headings, it doesn't.
  Fix: Syntax error in script update module (only if not silent update checking)